--- a/simplemediadatatest/simplemediadatatest.vcxproj
+++ b/simplemediadatatest/simplemediadatatest.vcxproj
@@ -79,6 +79,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="simple_aac.h" />
     <ClInclude Include="simple_h264.h" />
     <ClInclude Include="simple_media_raw.h" />
     <ClInclude Include="stdafx.h" />
@@ -87,6 +88,7 @@
   <ItemGroup>
     <ClCompile Include="simplemediadatatest.cpp" />
     <ClCompile Include="simple_h264.cpp" />
+    <ClCompile Include="simple_parse_aac.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
