--- a/simplemediadatatest/simplemediadatatest.vcxproj.filters
+++ b/simplemediadatatest/simplemediadatatest.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="simple_h264.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="simple_aac.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -42,6 +45,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="simple_h264.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="simple_parse_aac.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
