--- a/simplemediadatatest/simplemediadatatest.vcxproj.filters
+++ b/simplemediadatatest/simplemediadatatest.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="simple_aac.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="simple_flv.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -47,7 +50,10 @@
     <ClCompile Include="simple_h264.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="simple_parse_aac.cpp">
+    <ClCompile Include="simple_flv.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="simple_aac.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
