--- a/simplemediadatatest/simplemediadatatest.vcxproj
+++ b/simplemediadatatest/simplemediadatatest.vcxproj
@@ -83,6 +83,7 @@
     <ClInclude Include="simple_flv.h" />
     <ClInclude Include="simple_h264.h" />
     <ClInclude Include="simple_media_raw.h" />
+    <ClInclude Include="simple_rtp.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -91,6 +92,7 @@
     <ClCompile Include="simple_flv.cpp" />
     <ClCompile Include="simple_h264.cpp" />
     <ClCompile Include="simple_aac.cpp" />
+    <ClCompile Include="simple_rtp.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
